--- a/css/styles.scss
+++ b/css/styles.scss
@@ -186,6 +186,10 @@ a {
       height: 80vh;
     }
 
+    @media screen and (max-width: 480px) {
+      height: 50vh;
+    }
+
     video {
       width: 90%;
       position: fixed;
