--- a/css/styles.css
+++ b/css/styles.css
@@ -155,9 +155,9 @@ a {
   height: 100vh;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 480px) {
   .container #bg-video {
-    height: 80vh;
+    height: 60vh;
   }
 }
 
@@ -172,6 +172,7 @@ a {
   .container #bg-video video {
     width: 100%;
     left: 0;
+    margin-top: 72px;
   }
 }
 
