--- a/css/styles.scss
+++ b/css/styles.scss
@@ -182,12 +182,8 @@ a {
     width: 100%;
     height: 100vh;
 
-    @media screen and (max-width: 960px) {
-      height: 80vh;
-    }
-
     @media screen and (max-width: 480px) {
-      height: 50vh;
+      height: 60vh;
     }
 
     video {
@@ -199,6 +195,7 @@ a {
       @media screen and (max-width: 960px) {
         width: 100%;
         left: 0;
+        margin-top: 72px;
       }
     }
   }
